# deacube

./: .gitignore  README.md
AudioCube/: CMakeLists.txt
AudioCube/Source/: grid_component.cpp  grid_component.h  juce_docs.txt  main.cpp  main_audio_processor.cpp  music_model.cpp  music_model.h  project_config.h  sequencer.cpp  sequencer.h  test_sampler.cpp  test_sampler.h  todo_list.txt
AudioCube_Unity/Assets/: AudioCube.cs  AudioGridManager.cs  BlueCube.prefab  BlueMaterial.mat  GlobalClock.cs  GlowMaterial.mat  GreenCube.prefab  GreenMaterial.mat  HarmonicLibrary.cs  InterfaceController.cs  KeyBlock.cs  KeyBlock.prefab  MainMixer.mixer  MeasureBlock.cs  NoteCube.prefab  NoteTile.prefab  OrangeCube.prefab  OrangeMaterial.mat  OrbitCamera.cs  PathManager.cs  ProjectConfig.cs  PurpleCube.prefab  PurpleMaterial.mat  RedCube.prefab  RedMaterial.mat  SequenceMaster.cs  SongGenerator.cs  SongManager.cs  TileInteraction.cs  UIManager.cs  YellowCube.prefab  YellowMaterial.mat
AudioCube_Unity/Assets/Scenes/: SampleScene.unity
AudioCube_Unity/Assets/Scenes/SampleScene/: LightingData.asset
AudioCube_Unity/Assets/Settings/: PC_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
AudioCube_Unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
AudioCube_Unity/UserSettings/: EditorUserSettings.asset  Search.settings
AudioCube_Unity/UserSettings/Layouts/: default-6000.dwlt
